[tool.poetry]
name = "senior-design-predictor"
version = "0.1.0"
description = ""
authors = ["Orescout <orestis.skoutellas@gmail.com>"]
readme = "README.md"
packages = [{include = "senior_design_predictor"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
torch = "1.13.1"
GitPython = "^3.1.30"
matplotlib = "^3.6.3"
numpy = "^1.24.1"
opencv-python = "^4.7.0.68"
sklearn = "^0.0.post1"
Pillow = "^9.4.0"
psutil = "^5.9.4"
requests = "^2.28.2"
PyYAML = "^6.0"
scipy = "^1.10.0"
thop = "^0.1.1.post2209072238"
torchvision = "^0.14.1"
tqdm = "^4.64.1"
tensorboard = "^2.11.2"
pandas = "^1.5.3"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
